# cromshell

./: .bumpversion.cfg  .coveragerc  .gitignore  .isort.cfg  .pylintrc  LICENSE  MANIFEST.in  README.md  colors.py  cromshell  cromwell  demo.wdl  dev-requirements.txt  gnomAd_exome_INFO_to_remove.txt  gnomAd_genome_INFO_to_remove.txt  pyproject.toml  refresh.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tmp.txt  tox.ini
.github/workflows/: ci_main.yml  ci_submit.yml  integration_tests.yml  main.yml  pypi_packaging.yml  unit_tests.yml
completions/: _cromshell  reload.sh
developer_docs/: README.md  addcommand.md  addtests.md  cromshell_package_releases.md  mockdata.md  publish_release.md  runtests.md
docs/: README.md  addcommand.md  addtests.md  development.md  mockdata.md  runtests.md
legacy_cromshell/: README.md  cromshell
legacy_cromshell/completions/: _cromshell
resources/: no_call_cache.json  options.json
src/cromshell/: __main__.py  log.py
testing/: helloWorld.json  will_fail.json  will_fail.wdl
testing/metadata/: metadata.json
testing/workflows/: gpu_cuda_test.json
tests/: conftest.py
tests/acceptance/: test_placeholder.py
tests/integration/: conftest.py  test_abort.py  test_alias.py  test_counts.py  test_list_outputs.py  test_logs.py  test_placeholder.py  test_submit.py  test_update_server.py  test_validate.py  test_version.py  utility_test_functions.py
tests/metadata/: succeeded_helloworld.metadata.json
tests/resources/: README.md  cromwell_application.conf
tests/unit/: conftest.py  (+19 more)
utils/: womtool.py
(+77 files in other folders)
