[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cromshell-draft-release"
version = "2.0.0"
readme = "README.md"


[project.urls]
"Homepage" = "https://github.com/broadinstitute/cromshell"
"Bug Tracker" = "https://github.com/broadinstitute/cromshell/issues"
